--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,7 @@ services:
       - "${ELASTIC_HTTP_PORT:-9200}:9200"
     volumes:
       - elasticsearch_persistent:/usr/share/elasticsearch/data
+      - ${BEAKER_CONFIG_DIR:-/etc/BeaKer/}certificates:/usr/share/elasticsearch/config/certificates
 
   kibana:
     image: activecm-beaker/kibana:${ELK_VERSION_TAG:-latest}
@@ -21,5 +22,7 @@ services:
       - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
     ports:
       - "${KIBANA_HTTP_PORT:-5601}:5601"
+    volumes:
+      - ${BEAKER_CONFIG_DIR:-/etc/BeaKer/}certificates:/usr/share/kibana/config/certificates
     depends_on:
       - elasticsearch
