--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "shell-lib"]
 	path = shell-lib
-	url = git@github.com:activecm/shell-lib.git
+	url = https://github.com/activecm/shell-lib.git
