Update elasticsearch to 7.16.1

--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -1,2 +1,2 @@
-FROM elasticsearch:7.5.0
+FROM docker.elastic.co/elasticsearch/elasticsearch:7.16.1
 ADD ./elasticsearch.yml /usr/share/elasticsearch/config/elasticsearch.yml
