Upgrade ELK stack to v8.x
Upgrades to v7.17 before v8.x

--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -1,2 +1,7 @@
-FROM docker.elastic.co/elasticsearch/elasticsearch:7.16.1
+ARG ELK_STACK_VERSION
+
+FROM docker.elastic.co/elasticsearch/elasticsearch:${ELK_STACK_VERSION}
 ADD ./elasticsearch.yml /usr/share/elasticsearch/config/elasticsearch.yml
+RUN mkdir /usr/share/elasticsearch/snapshots
+RUN chown elasticsearch:root /usr/share/elasticsearch/snapshots
+
