--- a/kibana/kibana.yml
+++ b/kibana/kibana.yml
@@ -1,12 +1,15 @@
 ---
 server.name: "AI-Hunter: Kibana"
-server.host: "0"
+server.host: "0.0.0.0"
 server.ssl.enabled: true
 server.ssl.certificate: /usr/share/kibana/config/certificates/Kibana/Kibana.crt
 server.ssl.key: /usr/share/kibana/config/certificates/Kibana/Kibana.key
 
-elasticsearch.username: elastic
-elasticsearch.password: "${ELASTIC_PASSWORD}"
 elasticsearch.hosts: [ "https://elasticsearch:9200" ]
 elasticsearch.ssl.verificationMode: certificate
 elasticsearch.ssl.certificateAuthorities: [ "/usr/share/kibana/config/certificates/ca/ca.crt" ]
+elasticsearch.serviceAccountToken: "${KIBANA_SERVICE_TOKEN}"
+
+xpack.encryptedSavedObjects.encryptionKey: "${SAVED_OBJECTS_ENCRYPTION_KEY}"
+xpack.reporting.encryptionKey: "${REPORTING_ENCRYPTION_KEY}"
+xpack.security.encryptionKey: "${SECURITY_ENCRYPTION_KEY}"
