--- a/elasticsearch/Dockerfile
+++ b/elasticsearch/Dockerfile
@@ -3,5 +3,8 @@ ARG ELK_STACK_VERSION
 FROM docker.elastic.co/elasticsearch/elasticsearch:${ELK_STACK_VERSION}
 ADD ./elasticsearch.yml /usr/share/elasticsearch/config/elasticsearch.yml
 RUN mkdir /usr/share/elasticsearch/snapshots
+# The elasticsearch container runs under the elasticsearch user
+# Make sure that the elasticsearch user has permission to read/save snapshots
+# (this matches the ownership of many other folders within the container)
 RUN chown elasticsearch:root /usr/share/elasticsearch/snapshots
 
