--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,9 +1,15 @@
 version: '3'
 volumes:
   elasticsearch_persistent:
+  elasticsearch_snapshots:
+    driver: local
+    driver_opts:
+      type: 'none'
+      device: /opt/BeaKer/snapshots
+      o: bind
 services:
   elasticsearch:
-    image: activecm-beaker/elasticsearch:${ELK_VERSION_TAG:-latest}
+    image: activecm-beaker/elasticsearch:${ELK_STACK_VERSION:-latest}
     build: ./elasticsearch
     restart: unless-stopped
     environment:
@@ -14,20 +20,28 @@ services:
     volumes:
       - elasticsearch_persistent:/usr/share/elasticsearch/data
       - ${BEAKER_CONFIG_DIR:-/etc/BeaKer/}certificates:/usr/share/elasticsearch/config/certificates
-
+      - elasticsearch_snapshots:/usr/share/elasticsearch/snapshots
   kibana:
-    image: activecm-beaker/kibana:${ELK_VERSION_TAG:-latest}
+    image: activecm-beaker/kibana:${ELK_STACK_VERSION:-latest}
     build: ./kibana
     restart: unless-stopped
     environment:
-      - ELASTIC_PASSWORD=${ELASTIC_PASSWORD}
+      - KIBANA_SERVICE_TOKEN=${KIBANA_SERVICE_TOKEN}
+      - SAVED_OBJECTS_ENCRYPTION_KEY=${SAVED_OBJECTS_ENCRYPTION_KEY}
+      - REPORTING_ENCRYPTION_KEY=${REPORTING_ENCRYPTION_KEY}
+      - SECURITY_ENCRYPTION_KEY=${SECURITY_ENCRYPTION_KEY}
     ports:
       - "${KIBANA_HTTP_PORT:-5601}:5601"
     volumes:
       - ${BEAKER_CONFIG_DIR:-/etc/BeaKer/}certificates:/usr/share/kibana/config/certificates
     depends_on:
       - elasticsearch
-
+  check_kibana:
+    image: activecm-beaker/check_kibana:latest
+    build: ./check_kibana
+    restart: "no"
+    depends_on:
+      - kibana
   es-dump:
     image: taskrabbit/elasticsearch-dump:v6.28.0
     restart: "no"
@@ -36,3 +50,4 @@ services:
     depends_on:
       - elasticsearch
     entrypoint: ["/bin/true"]
+
