Store snapshots in /var/BeaKer/snapshots instead of /opt/BeaKer/snapshots

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ volumes:
     driver: local
     driver_opts:
       type: 'none'
-      device: /opt/BeaKer/snapshots
+      device: /var/BeaKer/snapshots
       o: bind
 services:
   elasticsearch:
