--- a/installer/install_beaker.yml
+++ b/installer/install_beaker.yml
@@ -103,7 +103,7 @@
         - linuxdeb
         - linuxrpm
 
-    - name: "BeaKer Install: Create Certificates"
+    - name: "BeaKer Install: Check for and create certificates."
       block:
         # Make sure certs don't exist before continuing
         - name: "BeaKer Install: Check if certificates already exist."
@@ -116,24 +116,36 @@
             - "instance/instance.key"
           register: check_cert_files
 
-        - name: "Whatever"
-          debug:
-            var: check_cert_files
-          failed_when: true
-
-        - name: "BeaKer Install: Generate ELK CA."
+        - name: "BeaKer Install: Generate ELK certificate authority certificate."
           command: "{{ item }}"
           with_items:
+            - "rm -rf /etc/BeaKer/certificates/ca"
             - "beaker run --rm --user root elasticsearch elasticsearch-certutil ca --pem --days 10950 --out /usr/share/elasticsearch/config/certificates/ca.zip > /dev/null"
             - "unzip /etc/BeaKer/certificates/ca.zip -d /etc/BeaKer/certificates"
             - "rm /etc/BeaKer/certificates/ca.zip"
+          when: ((crt_stat|length==0) or not crt_stat.0.stat.exists) or ((key_stat|length==0) or not key_stat.0.stat.exists)
+          vars:
+            crt_stat: "{{ (check_cert_files.results | selectattr('item', 'equalto', 'ca/ca.crt')) }}"
+            key_stat: "{{ (check_cert_files.results | selectattr('item', 'equalto', 'ca/ca.key')) }}"
 
-        - name: "BeaKer Install: Generate ELK certificates."
+        - name: "BeaKer Install: Generate ELK certificate."
           command: "{{ item }}"
           with_items:
-            - "beaker run --rm --user root elasticsearch /usr/share/elasticsearch/bin/elasticsearch-certutil cert --ca-cert /usr/share/elasticsearch/config/certificates/ca/ca.crt --ca-key /usr/share/elasticsearch/config/certificates/ca/ca.key --pem --days 10950 --out /usr/share/elasticsearch/config/certificates/certs.zip > /dev/null"
+            - "rm -rf /etc/BeaKer/certificates/instance"
+            - >-
+              beaker run --rm --user root elasticsearch elasticsearch-certutil cert
+              --ca-cert /usr/share/elasticsearch/config/certificates/ca/ca.crt
+              --ca-key /usr/share/elasticsearch/config/certificates/ca/ca.key
+              --pem --days 10950 --out /usr/share/elasticsearch/config/certificates/certs.zip > /dev/null
             - "unzip /etc/BeaKer/certificates/certs.zip -d /etc/BeaKer/certificates"
             - "rm /etc/BeaKer/certificates/certs.zip"
+          when: ((crt_stat|length==0) or not crt_stat.0.stat.exists) or ((key_stat|length==0) or not key_stat.0.stat.exists)
+          vars:
+            crt_stat: "{{ (check_cert_files.results | selectattr('item', 'equalto', 'instance/instance.crt')) }}"
+            key_stat: "{{ (check_cert_files.results | selectattr('item', 'equalto', 'instance/instance.key')) }}"
+
+    - name: "Short circuit"
+      fail:
 
     #    - name: "BeaKer Install: Start BeaKer"
     #      command: "beaker up -d"
@@ -146,7 +158,6 @@
       retries: 15
       delay: 10
       loop:
-        - beaker-es-dump-1
         - beaker-elasticsearch-1
         - beaker-kibana-1
 
