--- a/installer/install_beaker.yml
+++ b/installer/install_beaker.yml
@@ -142,13 +142,12 @@
             - "instance/instance.key"
           register: check_cert_files
 
-          # FIXME: Either install `unzip` package on target systems or see if elasticsearch container includes unzip
         - name: "BeaKer Install: Generate ELK certificate authority certificate."
           command: "{{ item }}"
           with_items:
             - "rm -rf /etc/BeaKer/certificates/ca"
             - "beaker run --rm --user root elasticsearch elasticsearch-certutil ca --pem --days 10950 --out /usr/share/elasticsearch/config/certificates/ca.zip > /dev/null"
-            - "unzip /etc/BeaKer/certificates/ca.zip -d /etc/BeaKer/certificates"
+            - "beaker run --rm --user root --workdir /usr/share/elasticsearch/config/certificates elasticsearch unzip ca.zip"
             - "rm /etc/BeaKer/certificates/ca.zip"
           when: ((crt_stat|length==0) or not crt_stat.0.stat.exists) or ((key_stat|length==0) or not key_stat.0.stat.exists)
           vars:
@@ -164,7 +163,7 @@
               --ca-cert /usr/share/elasticsearch/config/certificates/ca/ca.crt
               --ca-key /usr/share/elasticsearch/config/certificates/ca/ca.key
               --pem --days 10950 --out /usr/share/elasticsearch/config/certificates/certs.zip > /dev/null
-            - "unzip /etc/BeaKer/certificates/certs.zip -d /etc/BeaKer/certificates"
+            - "beaker run --rm --user root --workdir /usr/share/elasticsearch/config/certificates elasticsearch unzip certs.zip"
             - "rm /etc/BeaKer/certificates/certs.zip"
           when: ((crt_stat|length==0) or not crt_stat.0.stat.exists) or ((key_stat|length==0) or not key_stat.0.stat.exists)
           vars:
