--- a/installer/install_beaker.yml
+++ b/installer/install_beaker.yml
@@ -205,17 +205,17 @@
       set_fact:
         ELASTIC_PASSWORD: "{{ lookup('file', '/opt/BeaKer/.env') | regex_search('ELASTIC_PASSWORD=(.+)\\n', '\\1') | first }}"
 
-    - name: "BeaKer Install: Check for and generate Kibana service token."
-      block:
-        - name: "BeaKer Install: Check for Kibana service token."
-          ansible.builtin.uri:
-            url: "https://localhost:9200/_security/service/elastic/kibana/credential"
-            method: GET
-            validate_certs: false
-            user: "elastic"
-            password: "{{ ELASTIC_PASSWORD }}"
-          register: kb_token_lookup
+    - name: "BeaKer Install: Check for Kibana service token."
+      ansible.builtin.uri:
+        url: "https://localhost:9200/_security/service/elastic/kibana/credential"
+        method: GET
+        validate_certs: false
+        user: "elastic"
+        password: "{{ ELASTIC_PASSWORD }}"
+      register: kb_token_lookup
 
+    - name: "BeaKer Install: Generate Kibana service token."
+      block:
         - name: "BeaKer Install: Create new Kibana service token."
           ansible.builtin.uri:
             url: "https://localhost:9200/_security/service/elastic/kibana/credential/token/kibana-beaker"
@@ -223,7 +223,6 @@
             validate_certs: false
             user: "elastic"
             password: "{{ ELASTIC_PASSWORD }}"
-          when: kb_token_lookup.json.tokens["kibana-beaker"] is not defined
           register: kb_token_created
 
         - name: "BeaKer Install: Write Kibana service token to file."
@@ -231,11 +230,6 @@
             path: /opt/BeaKer/.env
             regexp: "^KIBANA_SERVICE_TOKEN=$"
             replace: "KIBANA_SERVICE_TOKEN={{ kb_token_created.json.token.value }}"
-          when: kb_token_lookup.json.tokens["kibana-beaker"] is not defined
-
-        - name: "BeaKer Install: Load Kibana service token from environment file."
-          set_fact:
-            KIBANA_SERVICE_TOKEN: "{{ lookup('file', '/opt/BeaKer/.env') | regex_search('KIBANA_SERVICE_TOKEN=(.+)\\n', '\\1') | first }}"
 
         - name: "BeaKer Install: Restart BeaKer."
           command: "{{ item }}"
@@ -253,6 +247,7 @@
             - beaker-kibana-1
           retries: 15
           delay: 10
+      when: kb_token_lookup.json.tokens["kibana-beaker"] is not defined
 
     - name: "BeaKer Install: Check for and create index lifecycle policy."
       block:
