Add INGEST_PASSWORD variable placeholder to environment file

--- a/.env.production
+++ b/.env.production
@@ -24,6 +24,7 @@ ELK_STACK_VERSION=8.17.10
 # Elastic Search Settings
 #
 ELASTIC_PASSWORD=
+INGEST_PASSWORD=
 BEAKER_CONFIG_DIR=/etc/BeaKer/
 ###############################################################################
 
